--- a/reference.bib
+++ b/reference.bib
@@ -1,18 +1,18 @@
-@article{kimura2022,
-  title={制御リアプノフ関数に基づく車両の非線形制御},
-  author={木村駿介},
-  journal={計測と制御},
-  volume={61},
-  number={2},
-  pages={97--102},
-  year={2022},
-  publisher={公益社団法人 計測自動制御学会}
+@article{sadasue2024,
+  title={タイトル},
+  author={貞末祐希},
+  journal={学会誌名},
+  volume={1},
+  number={1},
+  pages={1--2},
+  year={2024},
+  publisher={発行社名}
 }
-@inproceedings{kimura2020,
-  title={Control barrier function based on point cloud for human assist control},
-  author={Kimura, Shunsuke},
-  booktitle={IECON 2020 The 46th Annual Conference of the IEEE Industrial Electronics Society},
-  pages={2645--2650},
-  year={2020},
-  organization={IEEE}
+@inproceedings{iwaselab2024,
+  title={Title},
+  author={Sadasue, Yuki},
+  booktitle={ex MSCS},
+  pages={1--2},
+  year={2024},
+  organization={MSCS}
 }
