--- a/sample.tex
+++ b/sample.tex
@@ -59,13 +59,8 @@
 \begin{document}
 \twocolumn[
 \begin{flushright}令和6年3月21日（木）\end{flushright}
-<<<<<<< HEAD
 \begin{center}\LARGE\bf{班名}\end{center}
-\begin{center}\LARGE\bf{週報　第n回\\週報タイトル \\例) 単モータ型索状体ロボットの開発}
-=======
-\begin{center}\LARGE\bf{ロボット班(ヘビ)}\end{center}
-\begin{center}\LARGE\bf{週報　第n回\\単モータ型ヘビ型ロボットの開発}
->>>>>>> e9021cc7edaadee3f9e369b0ce478d1120de2aac
+\begin{center}\LARGE\bf{週報　第k回\\週報タイトル \\例) 単モータ型索状体ロボットの開発}
 \end{center}\large
 \vspace*{2mm}
 {\Large \begin{flushright}
