--- a/sample.tex
+++ b/sample.tex
@@ -60,7 +60,7 @@
 \twocolumn[
 \begin{flushright}令和6年3月21日（木）\end{flushright}
 \begin{center}\LARGE\bf{班名}\end{center}
-\begin{center}\LARGE\bf{週報　第k回\\週報タイトル \\例) 単モータ型索状体ロボットの開発}
+\begin{center}\LARGE\bf{週報　第n回\\週報タイトル \\例) 単モータ型索状体ロボットの開発}
 \end{center}\large
 \vspace*{2mm}
 {\Large \begin{flushright}
