--- a/reference.bib
+++ b/reference.bib
@@ -1,18 +1,45 @@
-@article{sadasue2024,
-  title={タイトル},
-  author={貞末祐希},
-  journal={学会誌名},
-  volume={1},
-  number={1},
-  pages={1--2},
-  year={2024},
-  publisher={発行社名}
+@ARTICLE{1,
+  author = {David Zarrouk and Moshe Mann and Nir Degani and Tal Yehuda and Nissan Jarbi and Amotz Hess},
+  journal = {Bioinspiration \& Biomimetics},
+  title = {Single actuator wave-like robot (SAW): design, modeling, and experiments*}, 
+  year = {2016},
+  volume = {11},
+  number = {4},
+  pages = {046004},
+  url = {https://dx.doi.org/10.1088/1748-3190/11/4/046004},
+  doi = {10.1088/1748-3190/11/4/046004}}
+
+@ARTICLE{8784270,
+  author={Shachaf, Dan and Inbar, Ori and Zarrouk, David},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={RSAW, A Highly Reconfigurable Wave Robot: Analysis, Design, and Experiments}, 
+  year={2019},
+  volume={4},
+  number={4},
+  pages={4475-4482},
+  keywords={DC motors;Gears;Robot sensing systems;Surface acoustic waves;Kinematics;Service robots;Crawling robot;mechanical design;reconfigurable robot;wave robot},
+  doi={10.1109/LRA.2019.2932583}}
+
+@Article{machines11030398,
+AUTHOR = {Sun, Haosheng and Wu, Qingxiang and Wang, Xuebing and Yang, Tong and Sun, Ning},
+TITLE = {A New Self-Reconfiguration Wave-like Crawling Robot: Design, Analysis, and Experiments},
+JOURNAL = {Machines},
+VOLUME = {11},
+YEAR = {2023},
+NUMBER = {3},
+ARTICLE-NUMBER = {398},
+URL = {https://www.mdpi.com/2075-1702/11/3/398},
+ISSN = {2075-1702},
+DOI = {10.3390/machines11030398}
 }
-@inproceedings{iwaselab2024,
-  title={Title},
-  author={Sadasue, Yuki},
-  booktitle={ex MSCS},
-  pages={1--2},
-  year={2024},
-  organization={MSCS}
-}
+
+@ARTICLE{9064570,
+  author={Watanabe, Masahiro and Tadakuma, Kenjiro and Konyo, Masashi and Tadokoro, Satoshi},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Bundled Rotary Helix Drive Mechanism Capable of Smooth Peristaltic Movement}, 
+  year={2020},
+  volume={5},
+  number={4},
+  pages={5537-5544},
+  keywords={Wheels;Mobile robots;Electron tubes;Actuators;Shape;Propulsion;Soft robot materials and design;mechanism design},
+  doi={10.1109/LRA.2020.2986993}}
